--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,6 @@
   "deno.unstable": false,
   "deno.suggest.imports.hosts": {
     "https://deno.land": true
-  }
+  },
+  "debug.javascript.unmapMissingSources": true
 }
